feat(i18n): 实现应用国际化支持并优化UI文本管理

--- a/src/vcf_generator_lite/resources/texts/about.html
+++ b/src/vcf_generator_lite/resources/texts/about.html
@@ -1,7 +1,7 @@
-<h6>链接</h6>
-源代码仓库：<a href="{repository_url}">{repository_url}</a><br/>
-版本发布：<a href="{release_url}">{release_url}</a><br />
-<h6>联系作者</h6>
-电子邮件：<a href="mailto:{jesse205_email}">{jesse205_email}</a>
-<h6>法律信息</h6>
-开源声明：<a href="{os_notices_url}">{os_notices_url}</a>
+<h6>{heading_links}</h6>
+{label_repository}<a href="{repository_url}">{repository_url}</a><br />
+{label_release}<a href="{release_url}">{release_url}</a><br />
+<h6>{heading_contact}</h6>
+{label_email}<a href="mailto:{jesse205_email}">{jesse205_email}</a>
+<h6>{heading_legal}</h6>
+{label_os_notices}<a href="{os_notices_url}">{os_notices_url}</a>
